--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <nav class="bg-light">
+        <div class="container">
+          <div class="bg-secondary py-4"></div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        
+      </section>
+      <section>
+
+      </section>
+      <section>
+
+      </section>
+      <section>
+
+      </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
