--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
       </nav>
     </header>
     <main>
-      <section>
-        
+      <section class="my-5">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h1>I'm Rodrigue Nyiringabo, Software Engineer</h1>
+              <h2>Welcome to my universe</h2>
+              <button>My web skills</button>
+            </div>
+            <div class="col">
+              <img src="images/me.jpeg" alt="My Photo" class="w-100">
+            </div>
+          </div>
+        </div>
       </section>
       <section>
 
