[NEW] Index page struture implementation: section 1 et section2

--- a/index.html
+++ b/index.html
@@ -19,18 +19,37 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h1>I'm Rodrigue Nyiringabo, Software Engineer</h1>
+              <h1>Rodrigue Nyiringabo, Software Engineer</h1>
               <h2>Welcome to my universe</h2>
               <button>My web skills</button>
             </div>
             <div class="col">
-              <img src="images/me.jpeg" alt="My Photo" class="w-100">
+              <img src="images/portrait.jpg" alt="My Photo" class="w-100">
             </div>
           </div>
         </div>
       </section>
-      <section>
-
+      <section class="bg-light">
+        <div class="container">
+          <div class="row py-5">
+            <div class="col">
+              <h2>My expertise</h2>
+              <h3>Web development and systems administration</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-7 bg-secondary"></div>
+            <div class="offset-1 col-4">
+              <img src="images/code.jpg" alt="Web development" class="w-100">
+            </div>
+          </div>
+          <div class="row py-4">
+            <div class="col-4">
+              <img src="images/design.jpg" alt="Systems Admin" class="w-100">
+            </div>
+            <div class="offset-1 col-7 bg-secondary"></div>
+          </div>
+        </div>
       </section>
       <section>
 
