--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="row py-5">
             <div class="col">
               <h2>My expertise</h2>
-              <h3>Web development and systems administration</h3>
+              <h4>Web development and systems administration</h4>
             </div>
           </div>
           <div class="row">
@@ -59,7 +59,19 @@
       </section>
     </main>
     <footer>
-
+      <div class="container">
+        <div class="row">
+          <div class="col pr-1">
+            <div class="bg-secondary py-3"></div>
+          </div>
+          <div class="col px-1">
+            <div class="bg-secondary py-3"></div>
+          </div>
+          <div class="col pl-1">
+            <div class="bg-secondary py-3"></div>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
