[NEW] Add portfolio section structure

--- a/index.html
+++ b/index.html
@@ -52,10 +52,31 @@
         </div>
       </section>
       <section>
-
+        <div class="container">
+          <div class="row py-5">
+            <div class="col">
+              <h2>My Portfolio</h2>
+              <h4>Personal and pro project</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col pr-1">
+              <div class="bg-secondary py-3"></div>
+            </div>
+            <div class="col px-1">
+              <div class="bg-secondary py-3"></div>
+            </div>
+            <div class="col px-1">
+              <div class="bg-secondary py-3"></div>
+            </div>
+            <div class="col pl-1">
+              <div class="bg-secondary py-3"></div>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
-
+        
       </section>
     </main>
     <footer>
