--- a/index.html
+++ b/index.html
@@ -59,37 +59,50 @@
               <h4>Personal and pro project</h4>
             </div>
           </div>
-          <div class="row">
+          <div class="row pb-4">
             <div class="col pr-1">
-              <div class="bg-secondary py-3"></div>
+              <div class="bg-secondary py-4"></div>
             </div>
             <div class="col px-1">
-              <div class="bg-secondary py-3"></div>
+              <div class="bg-secondary py-4"></div>
             </div>
             <div class="col px-1">
-              <div class="bg-secondary py-3"></div>
+              <div class="bg-secondary py-4"></div>
             </div>
             <div class="col pl-1">
-              <div class="bg-secondary py-3"></div>
+              <div class="bg-secondary py-4"></div>
             </div>
           </div>
         </div>
       </section>
-      <section>
-        
+      <section class="bg-light">
+        <div class="container">
+          <div class="row py-5">
+            <div class="col">
+              <h2>A web design project ?</h2>
+              <h4>Let's talk about it over a drink</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-5">
+              <img src="images/grab-a-coffee.jpg" alt="Grab a coffee" class="w-100">
+            </div>
+            <div class="offset-1 col-6 bg-secondary"></div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row py-4">
           <div class="col pr-1">
-            <div class="bg-secondary py-3"></div>
+            <div class="bg-secondary py-4"></div>
           </div>
           <div class="col px-1">
-            <div class="bg-secondary py-3"></div>
+            <div class="bg-secondary py-4"></div>
           </div>
           <div class="col pl-1">
-            <div class="bg-secondary py-3"></div>
+            <div class="bg-secondary py-4"></div>
           </div>
         </div>
       </div>
