[FIX] Fix missing padding in section 4

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <h4>Let's talk about it over a drink</h4>
             </div>
           </div>
-          <div class="row">
+          <div class="row pb-4">
             <div class="col-5">
               <img src="images/grab-a-coffee.jpg" alt="Grab a coffee" class="w-100">
             </div>
