--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </nav>
     </header>
     <main>
-      <section class="my-5">
+      <section class="py-5">
         <div class="container">
           <div class="row">
             <div class="col">
@@ -29,7 +29,7 @@
           </div>
         </div>
       </section>
-      <section class="bg-light">
+      <section class=" py-5 bg-light">
         <div class="container">
           <div class="row py-5">
             <div class="col">
@@ -51,7 +51,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="py-5">
         <div class="container">
           <div class="row py-5">
             <div class="col">
@@ -75,7 +75,7 @@
           </div>
         </div>
       </section>
-      <section class="bg-light">
+      <section class=" py-5 bg-light">
         <div class="container">
           <div class="row py-5">
             <div class="col">
