--- a/index.html
+++ b/index.html
@@ -29,25 +29,30 @@
           </div>
         </div>
       </section>
-      <section class=" py-5 bg-light">
+      <section class="py-5 bg-light">
         <div class="container">
-          <div class="row py-5">
+          <div class="row">
             <div class="col">
               <h2>My expertise</h2>
               <h4>Web development and systems administration</h4>
             </div>
           </div>
-          <div class="row">
-            <div class="col-7 bg-secondary"></div>
+          <div class="row mt-5">
+            <div class="col-7">
+              <div class="bg-secondary h-100 w-100">
+              </div>
+            </div>
             <div class="offset-1 col-4">
               <img src="images/code.jpg" alt="Web development" class="w-100">
             </div>
           </div>
-          <div class="row py-4">
+          <div class="row mt-5">
             <div class="col-4">
               <img src="images/design.jpg" alt="Systems Admin" class="w-100">
             </div>
-            <div class="offset-1 col-7 bg-secondary"></div>
+            <div class="offset-1 col-7">
+              <div class="bg-secondary h-100 w-100"></div>
+            </div>
           </div>
         </div>
       </section>
