--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
       </section>
       <section class="py-5">
         <div class="container">
-          <div class="row py-5">
+          <div class="row">
             <div class="col">
               <h2>My Portfolio</h2>
               <h4>Personal and pro project</h4>
             </div>
           </div>
-          <div class="row pb-4">
-            <div class="col pr-1">
-              <div class="bg-secondary py-4"></div>
+          <div class="row gy-4 mt-4">
+            <div class="col-3">
+              <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col px-1">
-              <div class="bg-secondary py-4"></div>
+            <div class="col-3">
+              <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col px-1">
-              <div class="bg-secondary py-4"></div>
+            <div class="col-3">
+              <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col pl-1">
-              <div class="bg-secondary py-4"></div>
+            <div class="col-3">
+              <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
           </div>
         </div>
