[ENH] Refactoring of the 4th section code

--- a/index.html
+++ b/index.html
@@ -80,19 +80,21 @@
           </div>
         </div>
       </section>
-      <section class=" py-5 bg-light">
+      <section class="py-5 bg-light">
         <div class="container">
-          <div class="row py-5">
+          <div class="row">
             <div class="col">
               <h2>A web design project ?</h2>
               <h4>Let's talk about it over a drink</h4>
             </div>
           </div>
-          <div class="row pb-4">
+          <div class="row mt-5">
             <div class="col-5">
               <img src="images/grab-a-coffee.jpg" alt="Grab a coffee" class="w-100">
             </div>
-            <div class="offset-1 col-6 bg-secondary"></div>
+            <div class="offset-1 col-6">
+              <div class="bg-secondary h-100 w-100"></div>
+            </div>
           </div>
         </div>
       </section>
