--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container">
-        <div class="row py-4">
-          <div class="col pr-1">
-            <div class="bg-secondary py-4"></div>
+    <footer border-top>
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-4">
+            <div class="bg-secondary py-5"></div>
           </div>
-          <div class="col px-1">
-            <div class="bg-secondary py-4"></div>
+          <div class="col-4">
+            <div class="bg-secondary py-5"></div>
           </div>
-          <div class="col pl-1">
-            <div class="bg-secondary py-4"></div>
+          <div class="col-4">
+            <div class="bg-secondary py-5"></div>
           </div>
         </div>
       </div>
