[NEW][UPD] Add and update my profile picture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <button>My web skills</button>
             </div>
             <div class="col">
-              <img src="images/portrait.jpg" alt="My Photo" class="w-100">
+              <img src="images/me.jpeg" alt="My Photo" class="w-100">
             </div>
           </div>
         </div>
