--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <main>
       <section class="py-5">
         <div class="container">
-          <div class="row">
-            <div class="col">
+          <div class="row gy-4 gy-md-0">
+            <div class="col-12 col-md-6">
               <h1>Rodrigue Nyiringabo, Software Engineer</h1>
               <h2>Welcome to my universe</h2>
               <button>My web skills</button>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-6">
               <img src="images/me.jpeg" alt="My Photo" class="w-100">
             </div>
           </div>
@@ -37,20 +37,20 @@
               <h4>Web development and systems administration</h4>
             </div>
           </div>
-          <div class="row mt-5">
-            <div class="col-7">
+          <div class="row gy-4 gy-md-0 mt-5">
+            <div class="col-12 col-md-7">
               <div class="bg-secondary h-100 w-100">
               </div>
             </div>
-            <div class="offset-1 col-4">
+            <div class="col-12 offset-md-1 col-md-4">
               <img src="images/code.jpg" alt="Web development" class="w-100">
             </div>
           </div>
-          <div class="row mt-5">
-            <div class="col-4">
+          <div class="row gy-4 gy-md-0 mt-5">
+            <div class="col-12 col-md-4">
               <img src="images/design.jpg" alt="Systems Admin" class="w-100">
             </div>
-            <div class="offset-1 col-7">
+            <div class="col-12 offset-md-1 col-md-7">
               <div class="bg-secondary h-100 w-100"></div>
             </div>
           </div>
