[NEW] Add responsivity in portefolio section

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
               <h4>Personal and pro project</h4>
             </div>
           </div>
-          <div class="row gy-4 mt-4">
-            <div class="col-3">
+          <div class="row gy-4 gy-md-0 mt-4">
+            <div class="col-12 col-md-3">
               <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="bg-secondary h-100 w-100 py-5"></div>
             </div>
           </div>
