[NEW] Add responsivity in Web design section

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
               <h4>Let's talk about it over a drink</h4>
             </div>
           </div>
-          <div class="row mt-5">
-            <div class="col-5">
+          <div class="row gy-4 gy-md-0 mt-5">
+            <div class="col-12 col-md-5">
               <img src="images/grab-a-coffee.jpg" alt="Grab a coffee" class="w-100">
             </div>
-            <div class="offset-1 col-6">
+            <div class="col-12 offset-md-1 col-md-6">
               <div class="bg-secondary h-100 w-100"></div>
             </div>
           </div>
