--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
         </div>
       </section>
     </main>
-    <footer border-top>
+    <footer class="border-top">
       <div class="container py-5">
-        <div class="row">
-          <div class="col-4">
+        <div class="row gy-4 gy-md-0">
+          <div class="col-12 col-md-4">
             <div class="bg-secondary py-5"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <div class="bg-secondary py-5"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <div class="bg-secondary py-5"></div>
           </div>
         </div>
