[UPD] Add style on the about section title

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="container">
           <div class="row gy-4 gy-md-0">
             <div class="col-12 col-md-6">
-              <h1>Rodrigue Nyiringabo, Software Engineer</h1>
-              <h2>Welcome to my universe</h2>
+              <h1 class="fw-bold">Rodrigue Nyiringabo, Software Engineer</h1>
+              <h2 class="fw-light">Welcome to my universe</h2>
               <button>My web skills</button>
             </div>
             <div class="col-12 col-md-6">
